// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToS modal should render ToS modal 1`] = `
<div
  aria-labelledby="components-modal-header-0"
  class="components-modal__frame woocommerce-payments__tos-modal"
  role="dialog"
  style="--modal-frame-animation-duration: 200ms;"
  tabindex="-1"
>
  <div
    class="components-modal__content"
    role="document"
  >
    <div
      class="components-modal__header"
    >
      <div
        class="components-modal__header-heading-container"
      >
        <h1
          class="components-modal__header-heading"
          id="components-modal-header-0"
        >
          WooPayments: Terms of Service
        </h1>
      </div>
    </div>
    <div>
      <div
        class="woocommerce-payments__tos-wrapper"
      >
        <div
          class="woocommerce-payments__tos-modal-message"
        >
          To continue using WooPayments, please review and agree to our 
          <a
            class="components-external-link"
            href="https://wordpress.com/tos"
            rel="external noreferrer noopener"
            target="_blank"
          >
            <span
              class="components-external-link__contents"
            >
              Terms of Service
            </span>
            <span
              aria-label="(opens in a new tab)"
              class="components-external-link__icon"
            >
              ↗
            </span>
          </a>
          . By clicking “Accept” you agree to the Terms of Service.
        </div>
        <div
          class="woocommerce-payments__tos-footer"
        >
          <button
            class="components-button is-next-40px-default-size is-secondary"
            type="button"
          >
            Decline
          </button>
          <button
            class="components-button is-next-40px-default-size is-primary"
            type="button"
          >
            Accept
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ToS modal should render disable plugin modal on decline 1`] = `
<div
  aria-labelledby="components-modal-header-3"
  class="components-modal__frame woocommerce-payments__tos-modal"
  role="dialog"
  style="--modal-frame-animation-duration: 200ms;"
  tabindex="-1"
>
  <div
    class="components-modal__content"
    role="document"
  >
    <div
      class="components-modal__header"
    >
      <div
        class="components-modal__header-heading-container"
      >
        <h1
          class="components-modal__header-heading"
          id="components-modal-header-3"
        >
          Disable WooPayments
        </h1>
      </div>
    </div>
    <div>
      <div
        class="woocommerce-payments__tos-wrapper"
      >
        <div
          class="woocommerce-payments__tos-modal-message"
        >
          By declining our 
          <a
            class="components-external-link"
            href="https://wordpress.com/tos"
            rel="external noreferrer noopener"
            target="_blank"
          >
            <span
              class="components-external-link__contents"
            >
              Terms of Service
            </span>
            <span
              aria-label="(opens in a new tab)"
              class="components-external-link__icon"
            >
              ↗
            </span>
          </a>
          , you’ll no longer be able to capture credit card payments using WooPayments. Your previous transaction and payout data will still be available.
        </div>
        <div
          class="woocommerce-payments__tos-footer"
        >
          <button
            class="components-button is-next-40px-default-size is-tertiary"
            type="button"
          >
            Back
          </button>
          <button
            class="components-button is-next-40px-default-size is-primary"
            type="button"
          >
            Disable
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
